cmake_minimum_required(VERSION 3.18.4)
project(CUT C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS -pthread)
if (CMAKE_C_COMPILER_ID STREQUAL "Clang")
    add_compile_options( -Weverything)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    add_compile_options( -Wall -Wextra)
endif()
add_executable(CUT src/main.c src/signal-handler.c src/integer-buffer.c src/string-buffer.c src/printer.c src/reader.c src/watchdog.c src/logger.c src/analyzer.c src/watchdog-box.c)
